// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Put whole family in bed together 1`] = `
Array [
  Array [
    undefined,
    Object {
      "gender": "male",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Noodle",
    },
    Object {
      "gender": "male",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Danny Marchese",
    },
    Object {
      "gender": "female",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Carrie Marchese",
    },
    Object {
      "gender": "female",
      "howManyOthersCanShareBed": Object {
        "king": 2,
        "queen": 2,
        "twin": 1,
      },
      "name": "Hope",
    },
  ],
  Array [
    undefined,
    Object {
      "gender": "female",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Carrie Marchese",
    },
    Object {
      "gender": "female",
      "howManyOthersCanShareBed": Object {
        "king": 2,
        "queen": 2,
        "twin": 1,
      },
      "name": "Hope",
    },
    Object {
      "gender": "male",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Noodle",
    },
    Object {
      "gender": "male",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Danny Marchese",
    },
  ],
]
`;

exports[`put married couple in same bed 1`] = `
Array [
  Array [
    undefined,
    Object {
      "gender": "male",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Noodle",
    },
    Object {
      "gender": "male",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Travis Davis",
    },
    Object {
      "gender": "female",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Andrea Davis",
    },
  ],
  Array [
    Object {
      "gender": "male",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Noodle",
    },
    Object {
      "gender": "male",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Travis Davis",
    },
    undefined,
    Object {
      "gender": "female",
      "howManyOthersCanShareBed": Object {
        "king": 1,
        "queen": 1,
        "twin": 0,
      },
      "name": "Andrea Davis",
    },
  ],
]
`;

exports[`short build 1`] = `Array []`;
